--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+    "dev": "supervisor -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "javascript",
     "backend",
     "chai"
   ],
-  "author": "Hitesh Choudhary",
+  "author": "Hitesh Choudhary - contributed by Md Faizanuddin",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "prettier": "^3.0.3"
   },
   "dependencies": {
@@ -28,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "supervisor": "^0.12.0"
   }
 }
